--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://inuraperera6:60121033@cluster0.yfprqlz.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=fb4216b1d6a93dff688b
+GITHUB_SECRET=1a5c779a464678f958056a8aef9602d459246012
+
+GOOGLE_CLIENT_ID=22926758681-mavstnvr65s8qemf2bf9hhg84m21q20l.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
