Messages creation, Message Image upload

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=1a5c779a464678f958056a8aef9602d459246012
 
 GOOGLE_CLIENT_ID=22926758681-mavstnvr65s8qemf2bf9hhg84m21q20l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dqdq8axjv
