real time messages and active status with pusher

--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ GOOGLE_CLIENT_ID=22926758681-mavstnvr65s8qemf2bf9hhg84m21q20l.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dqdq8axjv
+
+NEXT_PUBLIC_PUSHER_APP_KEY=a47aecb6feada6097bb8
+PUSHER_APP_ID=1747798
+PUSHER_SECRET=4da8d338d48bda2d7ec4
