--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-cloudinary": "^5.20.0",
     "next-superjson-plugin": "^0.6.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
